# secure-cloud

./: Cargo.toml  LICENSE
client-desktop/: package-lock.json  package.json
client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client-desktop/src-tauri/src/: lib.rs  main.rs
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
