[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = { version = "0.7", features = ["multipart"] }
tokio       = { version = "1",   features = ["full"] }
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid        = { version = "1",   features = ["v4", "serde"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2      = "0.5"
jsonwebtoken = "9"
chrono      = { version = "0.4", features = ["serde"] }
dotenvy     = "0.15"
anyhow      = "1"
base64      = "0.22"
tower       = "0.4"
async-trait = "0.1"
